--- a/public/index.html
+++ b/public/index.html
@@ -1,7 +1,7 @@
 <!doctype HTML>
 <html>
   <head>
-    <title>Welcome to Shopping App</title>
+    <title>Welcome to Shopping App test</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- <link rel="stylesheet" href="css/bootstrap.min.css"> -->
     <script type="text/javascript" src = "http://ajax.googleapis.com/ajax/libs/angularjs/1.3.14/angular.min.js"></script>
