Signup implementation. also some part of the  buyer-dashboard

--- a/public/index.html
+++ b/public/index.html
@@ -25,6 +25,7 @@
     <script type="text/javascript" src = "directives/item-snapshot.js"></script>
     <script type="text/javascript" src = "js/factories/dataTransfer.js"></script>
     <script type="text/javascript" src = "js/login.js"></script>
+    <script type="text/javascript" src = "js/signup.js"></script>
     <script type="text/javascript" src = "dummy-data/item-list.js"></script>
     <script type="text/javascript" src = "dummy-data/graph-data.js"></script>
     <script type="text/javascript" src = "js/dashboard.js"></script>
