--- a/public/index.html
+++ b/public/index.html
@@ -23,6 +23,8 @@
     <!--The following section should be deleted once the gulp issue is resolved-->
     <script type="text/javascript" src = "app.js"></script>
     <script type="text/javascript" src = "directives/item-snapshot.js"></script>
+    <script type="text/javascript" src = "directives/file-upload.js"></script>
+    <script type="text/javascript" src = "js/factories/file-upload.js"></script>
     <script type="text/javascript" src = "js/factories/dataTransfer.js"></script>
     <script type="text/javascript" src = "js/login.js"></script>
     <script type="text/javascript" src = "js/signup.js"></script>
@@ -35,7 +37,7 @@
   <body ng-app="ShoppingApp">
     <div class="nav-bar span12 block" ng-controller='masterController'>
       <h1>
-        <a ng-if="!userLoggedIn" href="#">Shopping</a>
+        <a ng-if="!userLoggedIn" href="#/login">Shopping</a>
         <a ng-if="userLoggedIn" href="#/dashboard">Shopping</a>
       </h1>
 
