added add item page

--- a/public/directives/html/item-snapshot.html
+++ b/public/directives/html/item-snapshot.html
@@ -8,7 +8,7 @@
       <i class="icon-edit"></i>
     </button>
     <div class="details">
-      <h4 class="block"><i>&#8377 {{obj.price}}</i></h4>
+      <h4 class="block"><i>&#8377 {{obj.price.sp}}</i></h4>
       <h5 class="text-align-justify">{{obj.details}}</h5>
     </div>
   </div>
