--- a/public/index.html
+++ b/public/index.html
@@ -33,6 +33,7 @@
     <script type="text/javascript" src = "dummy-data/graph-data.js"></script>
     <script type="text/javascript" src = "js/dashboard.js"></script>
     <script type="text/javascript" src = "js/edit-item.js"></script>
+    <script type="text/javascript" src = "js/add-item.js"></script>
 
   </head>
   <body ng-app="ShoppingApp">
