--- a/public/directives/html/product-card.html
+++ b/public/directives/html/product-card.html
@@ -3,6 +3,6 @@
   <div class="list-item-box">
     <img src="{{item.img}}" alt="{{item.alt}}" data-toggle="tooltip" title="{{item.name}}"/>
     <a href="">{{item.name}}</a>
-    <span class="block text-align-left">&#8377 {{item.price}}</span>
+    <span class="block text-align-left">&#8377 {{item.price.sp}}</span>
   </div>
 </div>
