--- a/public/index.html
+++ b/public/index.html
@@ -33,18 +33,18 @@
     <script type="text/javascript" src = "dummy-data/graph-data.js"></script>
     <script type="text/javascript" src = "js/dashboard.js"></script>
     <script type="text/javascript" src = "js/edit-item.js"></script>
-    <script type="text/javascript" src = "js/add-item.js"></script>
+    <script type="text/javascript" src = "js/add-Product.js"></script>
 
   </head>
   <body ng-app="ShoppingApp">
     <div class="nav-bar span12 block" ng-controller='masterController'>
       <h1>
-        <a ng-if="!userLoggedIn" href="#/login">Shopping</a>
-        <a ng-if="userLoggedIn" href="#/dashboard">Shopping</a>
+        <a ng-if="!userLoggedIn" href="#/login/">Shopping</a>
+        <a ng-if="userLoggedIn" href="#/dashboard/">Shopping</a>
       </h1>
 
       <div class="user-snapshot" ng-if='userLoggedIn'>
-        <span>Hi {{user.name}},</span>
+        <span>Hi {{user.username}},</span>
         <span><a ng-click='logout()'  tooltip="logout"><i class="icon-exit" style="color: #FFF;" alt="logout"></i></a></span>
       </div>
     </div>
