--- a/public/directives/html/product-card.html
+++ b/public/directives/html/product-card.html
@@ -1,8 +1,8 @@
 <div class="top-5 inline-block twenty-percent text-align-center">
   <!-- {{item.name}} -->
   <div class="list-item-box">
-    <img src="{{item.img}}" alt="{{item.alt}}" data-toggle="tooltip" title="{{item.name}}"/>
+    <img src="data:image/jpeg;base64, {{item.image}}" alt="{{item.name}}" data-toggle="tooltip" title="{{item.name}}"/>
     <a href="">{{item.name}}</a>
-    <span class="block text-align-left">&#8377 {{item.price.sp}}</span>
+    <span class="block text-align-left">&#8377 {{item.pricing.selling_price}}</span>
   </div>
 </div>
