--- a/public/index.html
+++ b/public/index.html
@@ -34,6 +34,7 @@
     <script type="text/javascript" src = "js/dashboard.js"></script>
     <script type="text/javascript" src = "js/edit-item.js"></script>
     <script type="text/javascript" src = "js/add-Product.js"></script>
+    <script type="text/javascript" src = "js/detailed-product-description.js"></script>
 
   </head>
   <body ng-app="ShoppingApp">
