Added cart icons,modals and some styling changes

--- a/public/directives/html/item-snapshot.html
+++ b/public/directives/html/item-snapshot.html
@@ -1,5 +1,7 @@
 <div class="item">
-  <img src="data:image/jpeg;base64, {{obj.image}}" alt="{{obj.name}}" class="thirty-percent img-responsive pad-a"/>
+  <div class="thirty-percent pad-a text-align-center">
+    <img src="data:image/jpeg;base64, {{obj.image}}" alt="{{obj.name}}" class="img-responsive"/>
+  </div>
   <div class="description seventy-percent">
     <h3 class="fifty-percent capitalize" data-toggle="tooltip" data-placement="top" title="{{obj.name}}">{{obj.name}}</h3>
     <h4 class="forty-percent capitalize" data-toggle="tooltip" data-placement="top" title="{{obj.category}}">{{obj.category}}</h4>
