--- a/public/index.html
+++ b/public/index.html
@@ -24,6 +24,7 @@
     <script type="text/javascript" src = "app.js"></script>
     <script type="text/javascript" src = "directives/item-snapshot.js"></script>
     <script type="text/javascript" src = "directives/file-upload.js"></script>
+    <script type="text/javascript" src = "directives/email.js"></script>
     <script type="text/javascript" src = "directives/product-card.js"></script>
     <script type="text/javascript" src = "js/factories/file-upload.js"></script>
     <script type="text/javascript" src = "js/factories/dataTransfer.js"></script>
